# effectful-microlens

./: .editorconfig  README.md  effectful-microlens.cabal  flake.nix
src/Effectful/Reader/: Common.in
src/Effectful/Reader/Dynamic/: Microlens.hs
src/Effectful/Reader/Static/: Microlens.hs
src/Effectful/State/: Common.in
src/Effectful/State/Dynamic/: Microlens.hs
src/Effectful/State/Static/Local/: Microlens.hs
src/Effectful/State/Static/Shared/: Microlens.hs
